--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint:fix": "npm run lint -- --fix",
     "prebuild": "npm run lint && npm run test",
     "test": "mocha --exit",
-    "start": "nodemon"
+    "start": "nodemon src"
   },
   "keywords": [],
   "author": "",
