--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "lint": "eslint . --ext .js",
     "lint:fix": "npm run lint -- --fix",
     "prebuild": "npm run lint && npm run test",
-    "test": "mocha --exit",
-    "start": "nodemon src"
+    "test": "set NODE_ENV=test&&mocha --exit",
+    "start": "nodemon src",
+    "mocked-start": "set NODE_ENV=test&&nodemon src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "mongoose": "^5.4.4"
+    "mongoose": "^5.4.4",
+    "mysql": "^2.17.1",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
