feat: generate tokens and authentication (#18)

--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "prebuild": "npm run lint && npm run test",
     "test": "set NODE_ENV=test&&mocha --exit",
     "start": "nodemon src",
+    "dev": "set NODE_ENV=dev&&nodemon src",
     "mocked-start": "set NODE_ENV=test&&nodemon src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.4",
     "mysql": "^2.17.1",
-    "cors": "^2.8.5",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
